warehouse20/ombi/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: warehouse20
  labels:
    app: ombi
    component: frontend
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 5000
      protocol: TCP
  selector:
    app: ombi

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ombi
    component: frontend
  name: ombi
  namespace: warehouse20
spec:
  serviceName: ombi
  selector:
    matchLabels:
      app: ombi
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ombi
        component: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: ombi
        image: hotio/ombi:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: data
          subPath: data
      volumes:
      - name: data
        iscsi:
          iqn: iqn.2019-03.com.ntwk20:vault01.ombi.cdab998267
          targetPortal: 172.20.1.5
          lun: 1
          chapAuthSession: true
          secretRef:
            name: vault01-chap-secret
