warehouse20/ombi/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/cf-origin
    nginx.ingress.kubernetes.io/auth-url: "http://organizr.warehouse20.svc.cluster.local/api/?v1/auth&group=4"
    nginx.ingress.kubernetes.io/auth-signin: "https://warehouse20.com/?error=401"
  labels:
    app: ombi
    component: frontend
  name: ombi
  namespace: warehouse20
spec:
  rules:
  - host: ombi.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: ombi
          servicePort: http
        path: /
  tls:
  - hosts:
    - ombi.warehouse20.com
    secretName: cf-w20
